--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                <nav class="nav">
                   <ul class="nav-list">
-                     <li class="nav-item"></a></li>
+                     <li class="nav-item">Who we are</a></li>
                      <li class="nav-item"><a href="#">What we do</a></li>
                      <li class="nav-item"><a href="#">Travel with us</a></li>
                      <li class="nav-item"><a href="#">Contact us</a></li>
