--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Bhromaon</title>
-   <link rel="icon" href="http://faviconka.ru/ico/faviconka_ru_1107.png" type="image/x-icon" />
+   <link rel="icon" href="https://faviconka.ru/ico/faviconka_ru_1107.png" type="image/x-icon" />
    <link rel="stylesheet" href="css/reset.css">
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/font-awesome.min.css">
